# synwire

./: .gitignore  .goreleaser.yaml  .osv-scanner.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  proptest.toml  rustfmt.toml
crates/synwire/: Cargo.toml  README.md
crates/synwire-agent/: Cargo.toml  README.md
crates/synwire-agent-skills/: Cargo.toml  README.md
crates/synwire-agent-skills/src/: error.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/synwire-agent-skills/src/runtime/: external.rs  lua.rs  mod.rs  path_safety.rs  rhai.rs  sequence.rs  wasm.rs
crates/synwire-agent/src/: experience_sampling.rs  lib.rs  sampling.rs
crates/synwire-agent/src/call_graph/: graph.rs  mod.rs
crates/synwire-agent/src/dataflow/: mod.rs  tracer.rs
crates/synwire-agent/src/experience/: mod.rs  pool.rs
crates/synwire-agent/src/mcp/: http.rs  in_process.rs  lifecycle.rs  mod.rs  stdio.rs
crates/synwire-agent/src/middleware/: archive.rs  environment.rs  fetch_detector.rs  filesystem.rs  git.rs  http.rs  mod.rs  narrowing.rs  patch_tool_calls.rs  pipeline.rs  process.rs  prompt_caching.rs  summarisation.rs
crates/synwire-agent/src/sandbox/: archive.rs  mod.rs  pipeline.rs  process.rs  shell.rs  threshold_gate.rs
crates/synwire-agent/src/sbfl/: mod.rs  ochiai.rs
crates/synwire-agent/src/session/: manager.rs  mod.rs  mounted_repos.rs
crates/synwire-agent/src/strategies/: direct.rs  fsm.rs  mcts.rs  mod.rs
crates/synwire-agent/src/tools/: code.rs  index.rs  meta.rs  mod.rs
crates/synwire-agent/src/vfs/: clone.rs  composite.rs  local.rs  mod.rs  store.rs
crates/synwire-agent/tests/: prop_agent_event_serde.rs  prop_directive_serde.rs
crates/synwire-checkpoint/: Cargo.toml  README.md
crates/synwire-checkpoint-conformance/: Cargo.toml  README.md
crates/synwire-checkpoint-conformance/src/: lib.rs
crates/synwire-checkpoint-sqlite/: Cargo.toml  README.md
crates/synwire-checkpoint-sqlite/src/: lib.rs  saver.rs  schema.rs
crates/synwire-checkpoint/src/: base.rs  lib.rs  memory.rs  types.rs
crates/synwire-checkpoint/src/serde/: json_plus.rs  mod.rs  protocol.rs
crates/synwire-checkpoint/src/store/: base.rs  in_memory.rs  (+1 more)
crates/synwire-checkpoint/tests/: prop_checkpoint_backwards_compat.rs
crates/synwire-chunker/: Cargo.toml  README.md
crates/synwire-chunker/src/: ast_chunker.rs  chunker.rs  language.rs  lib.rs  text_chunker.rs
crates/synwire-chunker/tests/: prop_chunk_invariants.proptest-regressions  prop_chunk_invariants.rs
crates/synwire-core/: Cargo.toml  README.md
crates/synwire-core/benches/: span_overhead.rs
crates/synwire-core/examples/: otel_tracing.rs
crates/synwire-core/src/: lib.rs  prelude.rs  state.rs
crates/synwire-core/tests/: prop_document_construction.rs  prop_embedding_dimension_invariant.rs  prop_message_serde_roundtrip.rs  prop_path_traversal_protection.rs  prop_prompt_template_substitution.rs  prop_resource_cleanup.rs  prop_synwire_error_display.rs  prop_tool_schema_validation.rs  prop_vector_store_search_count.rs
crates/synwire-daemon/: Cargo.toml  README.md
crates/synwire-daemon/src/: indexing.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  manager.rs
crates/synwire-dap/: Cargo.toml  README.md
crates/synwire-dap/src/: client.rs  codec.rs  config.rs  error.rs  lib.rs  plugin.rs  registry.rs  tools.rs  transport.rs
crates/synwire-derive/: Cargo.toml  README.md
crates/synwire-derive/src/: lib.rs  state.rs  tool.rs
crates/synwire-derive/tests/: state_tests.rs  tool_tests.rs
crates/synwire-embeddings-local/: Cargo.toml  README.md
crates/synwire-embeddings-local/src/: embeddings.rs  lib.rs  reranker.rs
crates/synwire-index/: Cargo.toml  README.md
crates/synwire-index/src/: bm25.rs  cache.rs  config.rs  hashes.rs  hybrid.rs  index.rs  lib.rs  pipeline.rs  walker.rs  watcher.rs  xref.rs
crates/synwire-llm-ollama/: Cargo.toml  README.md
crates/synwire-llm-ollama/src/: chat.rs  embeddings.rs  error.rs  lib.rs
crates/synwire-llm-ollama/tests/: integration_chat.rs
crates/synwire-llm-openai/: Cargo.toml  README.md
crates/synwire-llm-openai/examples/: prompt_chain.rs  simple_chat.rs  streaming.rs
crates/synwire-llm-openai/src/: base.rs  chat.rs  embeddings.rs  error.rs  lib.rs  moderation.rs
crates/synwire-llm-openai/tests/: integration_chat.rs
crates/synwire-lsp/: Cargo.toml  README.md
crates/synwire-lsp/src/: client.rs  config.rs  document_sync.rs  error.rs  lib.rs  plugin.rs  registry.rs  tools.rs
crates/synwire-mcp-adapters/: Cargo.toml  README.md
crates/synwire-mcp-adapters/src/: callbacks.rs  client.rs  error.rs  interceptor.rs  lib.rs  pagination.rs  provider.rs  session.rs  validation.rs
crates/synwire-mcp-server/: Cargo.toml  README.md
crates/synwire-mcp-server/src/: cli.rs  config.rs  main.rs  proxy.rs  sampling.rs  server.rs  tools.rs
crates/synwire-mcp-server/tests/: integration_test.rs
crates/synwire-orchestrator/: Cargo.toml  README.md
crates/synwire-orchestrator/src/: constants.rs  error.rs  lib.rs
crates/synwire-orchestrator/tests/: graph_tests.rs  prop_channel_last_value_overwrites.rs  prop_channel_topic_concatenates.rs  prop_checkpoint_roundtrip.rs  prop_conditional_edge_routing.rs  prop_graph_compilation.rs  prop_pregel_determinism.rs  prop_send_fanout.rs
crates/synwire-sandbox/: Cargo.toml  README.md
crates/synwire-sandbox/src/: error.rs  lib.rs  output.rs  process_registry.rs  visibility.rs
crates/synwire-sandbox/tests/: linux_e2e.rs
crates/synwire-storage/: Cargo.toml  README.md
crates/synwire-storage/src/: concurrency.rs  dependency_index.rs  error.rs  identity.rs  layout.rs  lib.rs  migration.rs  registry.rs
crates/synwire-test-utils/: Cargo.toml  README.md
crates/synwire-test-utils/src/: executors.rs  lib.rs
crates/synwire-vectorstore-lancedb/: Cargo.toml  README.md
crates/synwire-vectorstore-lancedb/src/: error.rs  lib.rs  store.rs
crates/synwire/examples/: few_shot_rag.rs
crates/synwire/src/: lib.rs  sandbox.rs
crates/synwire/tests/: e2e_agent.rs  e2e_chat.rs  e2e_graph.rs  e2e_rag.rs
(+424 files in other folders)
