[workspace]
resolver = "2"
members = [
    "crates/synwire-core",
    "crates/synwire-orchestrator",
    "crates/synwire-checkpoint",
    "crates/synwire-checkpoint-sqlite",
    "crates/synwire-llm-openai",
    "crates/synwire-llm-ollama",
    "crates/synwire",
    "crates/synwire-derive",
    "crates/synwire-test-utils",
    "crates/synwire-checkpoint-conformance",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomvariable/langchain-rs"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"
backoff = { version = "0.4", features = ["tokio"] }
json-patch = "3"
tracing = "0.1"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
schemars = "0.8"
moka = { version = "0.12", features = ["future"] }
proptest = "1"
mockall = "0.13"
tokio-test = "0.4"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_results = "deny"
unused_imports = "deny"
dead_code = "deny"
