[package]
name = "synwire-checkpoint-conformance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Checkpoint conformance test suite for Synwire"

[lints]
workspace = true

[dependencies]
synwire-checkpoint = { path = "../synwire-checkpoint" }
synwire-core = { path = "../synwire-core" }
tokio = { workspace = true }
