[package]
name = "synwire-checkpoint-conformance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Checkpoint conformance test suite for Synwire"
publish = false

[lints]
workspace = true

[dependencies]
synwire-checkpoint = { path = "../synwire-checkpoint", version = "0.1.0" }
synwire-core = { path = "../synwire-core", version = "0.1.0" }
tokio = { workspace = true }
