[package]
name = "synwire-checkpoint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Checkpoint traits and in-memory implementation for Synwire"

[lints]
workspace = true

[dependencies]
synwire-core = { path = "../synwire-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }
synwire-test-utils = { path = "../synwire-test-utils" }
