[package]
name = "synwire-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits and types for the Synwire AI framework"

[lints]
workspace = true

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }

# Optional observability
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

# Optional retry
backoff = { workspace = true, optional = true }

# Optional HTTP
reqwest = { workspace = true, optional = true }

# Optional event bus
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
synwire-test-utils = { path = "../synwire-test-utils", version = "0.1.0" }

[[bench]]
name = "span_overhead"
harness = false

[features]
default = ["retry", "http"]
retry = ["dep:backoff", "dep:tokio"]
http = ["dep:reqwest"]
tracing = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk"]
event-bus = ["dep:tokio"]
batch-api = []
