[package]
name = "synwire-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Procedural macros for Synwire (#[tool], #[derive(State)])"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
synwire-core = { path = "../synwire-core" }
synwire-orchestrator = { path = "../synwire-orchestrator" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
