[package]
name = "synwire-llm-ollama"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ollama provider for Synwire"

[lints]
workspace = true

[dependencies]
synwire-core = { path = "../synwire-core", features = ["http"] }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
mockall = { workspace = true }
