[package]
name = "synwire-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Language Server Protocol integration for Synwire agents"

[lints]
workspace = true

[dependencies]
synwire-core = { path = "../synwire-core", version = "0.1.0" }
async-lsp = { version = "0.2", features = ["tracing", "tokio", "omni-trait"] }
lsp-types = "0.95"
tower = "0.5"
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
backoff = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
