[package]
name = "synwire-test-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities, fake models, and proptest strategies for Synwire"

[lints]
workspace = true

[dependencies]
synwire-core = { path = "../synwire-core" }
synwire-checkpoint = { path = "../synwire-checkpoint" }
synwire-orchestrator = { path = "../synwire-orchestrator" }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
