[package]
name = "synwire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Convenience re-exports and reference implementations for Synwire"

[lints]
workspace = true

[dependencies]
synwire-core = { path = "../synwire-core" }
moka = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

synwire-llm-openai = { path = "../synwire-llm-openai", optional = true }
synwire-llm-ollama = { path = "../synwire-llm-ollama", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[features]
default = []
openai = ["dep:synwire-llm-openai"]
ollama = ["dep:synwire-llm-ollama"]
